--- a/templates/list.html
+++ b/templates/list.html
@@ -1,10 +1,10 @@
-{% extends 'layout/base.html' %}
-{% load static humanize %}
+{% load static %}
 
-{% block body %}
-<h1>TODO: Add the product list here</h1>
-{% endblock %}
-
-{% block js %}
-    <script type="module" src="{% static 'js/example.js' %}"></script>
-{% endblock %}
+{% for product in products %}
+    <div class="flex flex-row">
+        {{ product.name }}<br>
+        {{ product.description }}<br>
+        {{ product.price }}<br>
+        <img src="{% static 'img/'|add:product.img %}" alt="{{ product.name }}" />
+    </div>
+{% endfor %}
