--- a/templates/home.html
+++ b/templates/home.html
@@ -2,8 +2,14 @@
 {% load static humanize %}
 
 {% block body %}
-<h1 class="text-2xl font-bold">Cervezas</h1>
+{% include 'header.html' %}
+<h1 class="mt-12 mb-6 text-3xl font-semibold text-dark_text text-center">Cervezas</h1>
 {% include 'list.html' %}
+{% include 'button.html' %}
+{% include 'footer.html' %}
+{% include 'filter.html' %}
+{% include 'backdrop.html' %}
+{% include 'modal-filter.html' %}
 {% endblock %}
 
 {% block js %}
