--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -9,12 +9,26 @@
         <meta name="apple-mobile-web-app-title" content="axiacore">
         <link rel="apple-touch-icon-precomposed" href="{% static 'img/apple-touch-icon.png' %}">
         <link rel="icon" href="{% static 'img/favicon.png' %}">
+
+        <!-- Poppins font -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+        <!-- Alpine.js -->
+        <script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/collapse@3.14.3/dist/cdn.min.js"></script>
+        <script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/persist@3.x.x/dist/cdn.min.js"></script>
+        <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.3/dist/cdn.min.js"></script>
+
+        <!-- HTMX -->
+        <script src="https://unpkg.com/htmx.org@2.0.3" integrity="sha384-0895/pl2MU10Hqc6jd4RvrthNlDiE9U1tWmX7WRESftEDRosgxNsQG/Ze9YMRzHq" crossorigin="anonymous"></script>
+
         {% block css %}
             {% tailwind_css %}
         {% endblock %}
         {% block extra_head %}{% endblock %}
     </head>
-    <body class="{% block body_classes %}{% endblock %}">
+    <body x-data="{openModal: false, filter: $persist('0')}" x-bind:class="openModal ? 'font-poppins overflow-hidden' : 'font-poppins'">
         {% block body %}
         {% endblock body %}
         {% block js %}
